@@ -82,9 +82,22 @@ public:
         }
     }
 
+    void checkReadWrite() {
+        report(0,"check read/write");
+        Value v(4.2);
+        Bottle b;
+        b.read(v);
+        checkTrue(b.get(0).isDouble(),"structure ok");
+        checkEqual(b.get(0).asDouble(),4.2,"value ok");
+        Value v2;
+        b.write(v2);
+        checkEqual(v2.asDouble(),4.2,"value reread ok");
+    }
+
     virtual void runTests() {
         checkCopy();
         checkMixedCopy();
+        checkReadWrite();
     }
 };
 
